--- a/ans5.html
+++ b/ans5.html
@@ -1,5 +1,5 @@
 <script>
-    for(let x = 400; x<350; x--){
+    for(let x = 400; x>350; x--){
         if(x%2==0){
             console.log(x);
         }
